--- a/src/cabinets.Core/Views/TimeViewCell.xaml
+++ b/src/cabinets.Core/Views/TimeViewCell.xaml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 
-<views:MvxViewCell xmlns="http://xamarin.com/schemas/2014/forms"
+<ViewCell xmlns="http://xamarin.com/schemas/2014/forms"
                    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                    xmlns:d="http://xamarin.com/schemas/2014/forms/design"
                    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -15,4 +15,4 @@
             <Label Text="{Binding Value}" TextColor="#505050" HorizontalOptions="Center" VerticalOptions="Center" />
         </Frame>
     </ViewCell.View>
-</views:MvxViewCell>
+</ViewCell>
