--- a/src/cabinets.Core/Views/CabinetsViewCell.xaml
+++ b/src/cabinets.Core/Views/CabinetsViewCell.xaml
@@ -8,7 +8,7 @@
           x:Class="cabinets.Core.Views.CabinetsViewCell">
     <ViewCell.View>
         <!--Ячейка представления для списка на странице выбрать кабинет-->
-        <Frame Padding="5,0,10,0" Margin="0,5,0,0" HeightRequest="80">
+        <Frame Padding="5,0,10,0" Margin="0,5,0,0" HeightRequest="80" HasShadow="False">
             <Grid BackgroundColor="White" ColumnSpacing="10">
                 <Grid.Resources>
                     <ResourceDictionary>
