--- a/src/cabinets.Core/Views/CalendarView.xaml
+++ b/src/cabinets.Core/Views/CalendarView.xaml
@@ -31,6 +31,7 @@
                                    StartDay="Monday"
                                    OuterBorderWidth="0"
                                    IsClippedToBounds="True"
+                                   SpecialDates="{Binding SpecialDates}"
                                    SelectedDate="{Binding SelectedDate}" />
             </StackLayout>
         </StackLayout>
