--- a/src/cabinets.Core/Views/CalendarView.xaml
+++ b/src/cabinets.Core/Views/CalendarView.xaml
@@ -11,34 +11,7 @@
     <ContentView.Content>
         <!--Календарь-->
         <StackLayout BackgroundColor="White" Margin="0,10">
-
-            <OnPlatform x:TypeArguments="View">
-                <On Platform="Android">
-                    <calendar:Calendar Padding="40,20"
-                                       TitleRightArrowTextColor="#31516D"
-                                       TitleLabelFontSize="16"
-                                       TitleLabelTextColor="#31516D"
-                                       TitleLeftArrowTextColor="#31516D"
-                                       SelectedBorderWidth="0"
-                                       SelectedTextColor="#FFFFFF"
-                                       SelectedBackgroundColor="#31516D"
-                                       SelectedBorderColor="Transparent"
-                                       WeekdaysFontSize="16"
-                                       WeekdaysTextColor="#31516D"
-                                       DatesFontSize="12"
-                                       DatesTextColor="#333333"
-                                       BorderWidth="1"
-                                       BorderColor="Transparent"
-                                       DisabledBorderColor="Transparent"
-                                       ShowNumberOfWeek="False"
-                                       StartDay="Monday"
-                                       OuterBorderWidth="0"
-                                       IsClippedToBounds="True"
-                                       SpecialDates="{Binding SpecialDates}"
-                                       SelectedDate="{Binding SelectedDate}" />
-                </On>
-                <On Platform="iOS">
-                    <controls:Calendar
+            <controls:Calendar
                         Padding="40, 20"
                         DaysTitleColor="#31516D"
                         ArrowsColor="#31516D"
@@ -52,10 +25,8 @@
                         MonthLabelColor="#31516D"
                         TodayOutlineColor="#31516D"
                         OtherMonthDayColor="Gray"
-                        x:Name="Calendar"
+                        x:Name="Cal"
                         SelectedDate="{Binding SelectedDate}" />
-                </On>
-            </OnPlatform>
         </StackLayout>
     </ContentView.Content>
 </ContentView>
