--- a/src/cabinets.Core/Pages/Cabinets/CabinetsPage.xaml
+++ b/src/cabinets.Core/Pages/Cabinets/CabinetsPage.xaml
@@ -33,7 +33,8 @@
                            VerticalScrollBarVisibility="Never"
                            ItemsSource="{Binding Cabinets}"
                            ItemSelected="ListView_OnItemSelected"
-                           SelectedItem="{Binding SelectedCabinet}">
+                           SelectedItem="{Binding SelectedCabinet}"
+                           BackgroundColor="White">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <views1:CabinetsViewCell />
